--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --accent-color: #e07f7c;
   background-image: url("/public/v830-sasi-29.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: inherit;
   --tag-background-color: rgba(107, 126, 222, 0.708);
 }
 
@@ -12,6 +12,27 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+body {
+  color: var(--text-color-light);
+  font-family: "Inter", sans-serif;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  backdrop-filter: blur(20px);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+/* aici */
 
 .scroll-to-top {
   position: fixed;
@@ -28,26 +49,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-body {
-  color: var(--text-color-light);
-  font-family: "Inter", sans-serif;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 40px; /* Adjust height */
-
-  backdrop-filter: blur(20px); /* Optional: Glass effect */
-  z-index: 1000; /* Ensure navbar is above content */
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
 }
 
 .navbar a {
@@ -92,6 +93,7 @@ a:hover {
 .card-container {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 h1 {
@@ -143,6 +145,17 @@ h1 {
   height: 30rem;
 }
 
+.projects-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.card-project-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
 .card-project {
   display: flex;
   flex-direction: column;
@@ -167,7 +180,6 @@ h1 {
 .card-front,
 .card-back {
   width: 100%;
-
   position: absolute;
   backface-visibility: hidden;
   display: flex;
@@ -241,4 +253,99 @@ h1 {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+}
+
+/* Responsive Styles */
+/* tablets and small laptops */
+@media screen and (max-width: 1024px) {
+}
+
+/* mobile devices */
+/* @media screen and (max-width: 768px) {
+} */
+
+/* small mobile devices */
+@media screen and (max-width: 1024px) {
+  .navbar {
+    padding: 0;
+  }
+
+  .content {
+    padding: 0;
+    margin: 0;
+  }
+
+  #about-me {
+    width: 100%;
+    padding: 0;
+  }
+
+  .card-info {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .left {
+    flex-direction: column;
+    padding-top: 10px;
+    margin-bottom: 0;
+    font-size: 2rem;
+  }
+
+  .right {
+    padding-top: 10px;
+    margin-bottom: 0;
+    flex-direction: column;
+    font-size: 2rem;
+  }
+
+  .card-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .card-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+
+  .card-text {
+    font-size: 1.5rem;
+    text-align: justify;
+  }
+
+  .contact-items {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 10px;
+  }
+
+  .contact-item {
+    display: flex;
+    flex-direction: row;
+    padding-left: 10px;
+  }
+
+  .contact-item-value {
+    font-size: 1rem;
+  }
+
+  #projects {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    height: auto;
+  }
+
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card-project {
+    height: 250px;
+  }
 }
